# nielsshootsfilm-planfirst

./: .bazelignore  .bazelrc  .commitlintrc.js  .editorconfig  .env.example  .envrc  .gitignore  .golangci.yml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  BUILD.bazel  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REVIEW.md  README.md  SIMPLIFICATION_SUMMARY.md  WORKSPACE  agents.md  bootstrap.sh  build.sh  dev.sh  env.example  fmt.sh  format.sh  plan.md  provision.sh  test.sh
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  BUILD.bazel  Dockerfile  README.md  dev.sh  fmt.sh  go.mod  go.sum  lint.sh  test-coverage.sh  test.sh  tidy.sh
backend/cmd/admin/: main.go
backend/cmd/hash-password/: main.go
backend/cmd/test_hash/: main.go
backend/internal/handlers/: BUILD.bazel  album_handler.go  auth_handler.go  config_handler.go  og_image_handler.go  og_image_handler_test.go  storage_handler.go  storage_handler_test.go
backend/internal/middleware/: auth.go  logger.go  recovery.go  request_id.go  security.go
backend/internal/models/: BUILD.bazel  admin_config.go  album.go  schema_validation_test.go  site_config.go
backend/internal/services/: BUILD.bazel  album_service.go  album_service_test.go  auth_service.go  auth_service_test.go  file_service.go  file_service_test.go  image_service.go  image_service_test.go  image_size_test.go  site_config_service.go
backend/scripts/: README.md  build.sh  deploy-macos.sh  dev.sh  fmt.sh  lint.sh  start-backend.sh  stop-backend.sh  test-coverage.sh  test.sh  tidy.sh
data/: BUILD.bazel  albums.json  site_config.json
deployment/: BACKEND_DEPLOYMENT.md  README.md  apache-site-nielsshootsfilm.com.conf  apache-site.conf  photo-admin.service  server-provision.sh
docs/: API_TEST_RESULTS.md  BAZEL_CHEATSHEET.md  BAZEL_SETUP.md  DEPLOYMENT.md  DEVELOPER_WORKFLOW.md  DEVELOPMENT_SETUP.md  OPEN_GRAPH_IMPLEMENTATION.md  PHASE_1.5_COMPLETE.md  PLAN_ANALYTICS.md  PLAN_BLOG.md  PLAN_BULKEXPORT.md  PLAN_DARKMODE.md  PLAN_DISKUSAGE.md  PLAN_E2E_TEST.md  PLAN_MVP.md  PLAN_PHASE8_ENHANCEMENTS.md  PLAN_SEO.md  SIMPLIFICATION_COMPLETE.md
docs/deployment/: backend_docker.md  backend_in_docker_on_macos.md  backend_on_macos.md  deploy_frontend.md
docs/plan/: PLAN_ANALYTICS.md  PLAN_BLOG.md  PLAN_BULKEXPORT.md  PLAN_CONCURRENT_UPLOADS.md  PLAN_DARKMODE.md  PLAN_DISKUSAGE.md  PLAN_DOCKER_MIGRATION.md  PLAN_E2E_TEST.md  PLAN_GREMLINS_CHAOS_TESTING.md  PLAN_LIGHTBOX_AS_PAGE.md  PLAN_MARKDOWN.md  PLAN_MVP.md  PLAN_OPEN_GRAPH.md  PLAN_PHASE8_ENHANCEMENTS.md  PLAN_SENTRY_MONITORING.md  PLAN_SEO.md  PLAN_TOUCH_GESTURES.md
docs/releases/: v1.0.0.md
docs/reports/: 2025-01-20-18_UNIT_TEST_RESULTS.md  2025-10-20-15_E2E_TEST_RESULTS.md  2025-10-20-17_admin_frontend_completion.md  2025-10-20-18_REMOVE_DUPLICATE_PORTFOLIO_FLAG.md  2025-10-20-19_frontend_production_build.md  2025-10-20-21_typography_improvements.md  2025-10-20-22_E2E_TEST_RESULTS.md  2025-10-21-11_drag_drop_photo_reorder.md  2025-10-21-21_disk_usage_tests.md  2025-10-21-23_admin_styling_unification.md  2025-10-22-logout-cache-bug-fix.md  2025-10-29-compositing-layer-analysis.md  ADMIN_FRONTEND_TEST_RESULTS.md  API_TEST_RESULTS.md  BAZEL_REMOVAL.md  PHASE_1.5_COMPLETE.md  PHASE_5_BAZEL_COMPLETE.md  PROVISION_SCRIPT_COMPLETE.md
e2e/: BUILD.bazel
frontend/: .env.production  BUILD.bazel  NAVIGATION_GUIDE.md  README.md  build.sh  dev.sh  env.production  eslint.config.js  format.sh  lint.sh  package-lock.json  package.json  test-watch.sh  test.sh  tsconfig.json  typecheck.sh  vite.config.ts  vitest.config.ts
frontend/scripts/: README.md  build.sh  dev.sh  format.sh  lint.sh  start-frontend.sh  stop-frontend.sh  test-watch.sh  test.sh  typecheck.sh
frontend/src/: index.html  main.ts  test-setup.ts
frontend/src/components/: admin-header.test.ts  admin-header.ts  album-card.test.ts  album-card.ts  album-cover-hero.test.ts  album-cover-hero.ts  app-footer.test.ts  app-footer.ts  app-nav.test.ts  app-nav.ts  app-shell.ts  lazy-image.test.ts  lazy-image.ts  loading-spinner.test.ts  loading-spinner.ts  photo-grid.test.ts  photo-grid.ts  photo-lightbox.test.ts  photo-lightbox.ts  storage-stats.test.ts  storage-stats.ts  toast-notification.test.ts  toast-notification.ts  upload-placeholder.test.ts  upload-placeholder.ts
frontend/src/pages/: admin-album-editor-page.test.ts  admin-album-editor-page.ts  admin-albums-page.test.ts  admin-albums-page.ts  admin-dashboard-page.test.ts  admin-dashboard-page.ts  admin-login-page.test.ts  admin-login-page.ts  admin-settings-page.test.ts  admin-settings-page.ts  album-detail-page.ts  album-list-page.ts  album-photo-page.test.ts  album-photo-page.ts  funsies-page.ts  password-form.ts  portfolio-page.ts
frontend/src/styles/: admin-theme.css  admin.css  global.css  theme.css
frontend/src/types/: data-models.ts  schema-validation.test.ts
frontend/src/utils/: admin-api.test.ts  admin-api.ts  api.test.ts  api.ts  auth-state.ts  constants.ts  navigation.test.ts  navigation.ts  router.test.ts  router.ts  theme-manager.test.ts  theme-manager.ts
scripts/: README.md  bootstrap.sh  check-no-js-files.sh  check-script-locations.sh  deploy-backend.sh  deploy-frontend.sh  download-sample-images.js  download-sample-images.sh  generate-apache-config.sh  hash-password.sh  hash_password.go  server-build-backend.sh  server-build-frontend.sh  server-install-frontend.sh  start-backend.sh  stop-backend.sh  test-api.sh  test-schema-validation.sh
static/: BUILD.bazel
testdata/: BUILD.bazel
