package(default_visibility = ["//visibility:public"])

# All test data files
filegroup(
    name = "all",
    srcs = glob([
        "images/**/*",
        "json/**/*",
    ]),
)

# Test images
filegroup(
    name = "images",
    srcs = glob(["images/**/*"]),
)

# Test JSON fixtures
filegroup(
    name = "json",
    srcs = glob(["json/**/*"]),
)
